crates/mun_codegen/src/snapshots/test__bit_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn not(a: u8) -> u8 { !a }\npub fn bitand(a: u8, b: u8) -> u8 { a & b }\npub fn bitor(a: u8, b: u8) -> u8 { a | b }\npub fn bitxor(a: u8, b: u8) -> u8 { a ^ b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo*]

define i8 @not(i8) {
body:
  %not = xor i8 %0, -1
  ret i8 %not
}

define i8 @bitand(i8, i8) {
body:
  %bit_and = and i8 %0, %1
  ret i8 %bit_and
}

define i8 @bitor(i8, i8) {
body:
  %bit_or = or i8 %0, %1
  ret i8 %bit_or
}

define i8 @bitxor(i8, i8) {
body:
  %bit_xor = xor i8 %0, %1
  ret i8 %bit_xor
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@"type_info::<core::u8>::name" = private unnamed_addr constant [9 x i8] c"core::u8\00"
@"type_info::<core::u8>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\A0y\A7S\B6(n\F7f&H\E1\F9\AD\04>", [9 x i8]* @"type_info::<core::u8>::name", i32 8, i8 1, i8 0 }
@global_type_table = constant [1 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::u8>"]

