crates/mun_codegen/src/snapshots/test__compare_op_f32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn equals(a: f32, b: f32) -> bool { a == b }\npub fn not_equal(a: f32, b: f32) -> bool { a != b}\npub fn less(a: f32, b: f32) -> bool { a < b }\npub fn less_equal(a: f32, b: f32) -> bool { a <= b }\npub fn greater(a: f32, b: f32) -> bool { a > b }\npub fn greater_equal(a: f32, b: f32) -> bool { a >= b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [2 x %struct.MunTypeInfo addrspace(4)*]

define i1 @equals(float, float) {
body:
  %eq = fcmp oeq float %0, %1
  ret i1 %eq
}

define i1 @not_equal(float, float) {
body:
  %neq = fcmp one float %0, %1
  ret i1 %neq
}

define i1 @less(float, float) {
body:
  %less = fcmp olt float %0, %1
  ret i1 %less
}

define i1 @less_equal(float, float) {
body:
  %lesseq = fcmp ole float %0, %1
  ret i1 %lesseq
}

define i1 @greater(float, float) {
body:
  %greater = fcmp ogt float %0, %1
  ret i1 %greater
}

define i1 @greater_equal(float, float) {
body:
  %greatereq = fcmp oge float %0, %1
  ret i1 %greatereq
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::f32>::name" = private unnamed_addr constant [10 x i8] c"core::f32\00"
@"type_info::<core::f32>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"P\19b7\A8k\F2\81P\FB\83\F5P\B0\82!", [10 x i8]* @"type_info::<core::f32>::name", i32 32, i8 4, i8 0 }
@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", [11 x i8]* @"type_info::<core::bool>::name", i32 1, i8 1, i8 0 }
@global_type_table = global [2 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::f32>", %struct.MunTypeInfo addrspace(4)* @"type_info::<core::bool>"]

